log
Thu Apr 30 08:13:02 PM UTC 2026: 
 treemap.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  3|7
total_score: 5/60
8389d45
Thu Apr 30 08:46:29 PM UTC 2026: 
 treemap.c | 21 ++++++++++++++++++++-
 1 file changed, 20 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘nextTreeMap’:
treemap.c:121:16: error: ‘auxAvance’ undeclared (first use in this function)
  121 |         while (auxAvance -> left != NULL){
      |                ^~~~~~~~~
treemap.c:121:16: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:135:9: error: ‘p’ undeclared (first use in this function)
  135 |     if (p != NULL) return p -> pair;
      |         ^
treemap.c:136:1: error: control reaches end of non-void function [-Werror=return-type]
  136 | }
      | ^
cc1: all warnings being treated as errors
c196059
Thu Apr 30 08:47:09 PM UTC 2026: 
 treemap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘nextTreeMap’:
treemap.c:136:1: error: control reaches end of non-void function [-Werror=return-type]
  136 | }
      | ^
cc1: all warnings being treated as errors
134f920
Thu Apr 30 08:47:48 PM UTC 2026: 
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘nextTreeMap’:
treemap.c:136:1: error: control reaches end of non-void function [-Werror=return-type]
  136 | }
      | ^
cc1: all warnings being treated as errors
96f1047
Thu Apr 30 08:48:26 PM UTC 2026: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|7
total_score: 8/60
1254a4d
Thu Apr 30 08:49:21 PM UTC 2026: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|7
total_score: 8/60
341d29d
Thu Apr 30 08:56:10 PM UTC 2026: 
 treemap.c | 10 ++++++----
 1 file changed, 6 insertions(+), 4 deletions(-)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘nextTreeMap’:
treemap.c:129:15: error: unused variable ‘p’ [-Werror=unused-variable]
  129 |     TreeNode* p = aux -> parent;
      |               ^
cc1: all warnings being treated as errors
99f95ce
Thu Apr 30 08:56:35 PM UTC 2026: 
 treemap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  8|6
total_score: 15/60
ed89ace
Thu Apr 30 08:59:32 PM UTC 2026: 
 tests:  8|6
total_score: 15/60
bda452f
Sun May  3 01:34:49 AM UTC 2026: 
 treemap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  11|5
total_score: 20/60
0b91b6b
